Swagger for login and register
